...
        android:padding="@dimen/padding_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_exam_hint">

        <Button
            android:id="@+id/btn_exam_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_exam_10"
            android:drawableTop="@drawable/ic_timer"
            android:drawablePadding="6dp" />

...
